fix margin on mobile resolution

--- a/blocks/page.css
+++ b/blocks/page.css
@@ -4,7 +4,6 @@
   display: flex;
   flex: 1;
   flex-direction: column;
-  margin: 0 65px;
 }
 
 .page__content {
@@ -18,4 +17,9 @@
   margin: 0 auto;
 }
 
+@media screen and (min-width: 320px) {
+  .page__content {
+    width: 100%;
+  }
+}
 
